// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GorgiasChatIntegrationQuickReplies/> render() should render defaults because there is no quick replies in the integration 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(GorgiasChatIntegrationQuickRepliesComponent)
    currentUser={Immutable.Map {}}
    integration={
      Immutable.Map {
        "id": 7,
        "name": "my chat integration",
        "meta": Immutable.Map {},
        "decoration": Immutable.Map {
          "introduction_text": "this is an intro",
          "input_placeholder": "type something please",
          "main_color": "#123456",
        },
      }
    }
    updateOrCreateIntegration={[MockFunction]}
  >
    <GorgiasChatIntegrationQuickRepliesComponent
      integration={
        Immutable.Map {
          "id": 7,
          "name": "my chat integration",
          "meta": Immutable.Map {},
          "decoration": Immutable.Map {
            "introduction_text": "this is an intro",
            "input_placeholder": "type something please",
            "main_color": "#123456",
          },
        }
      }
      updateOrCreateIntegration={[Function]}
    >
      <div
        className="full-width"
      >
        <PageHeader
          title={
            <Breadcrumb
              aria-label="breadcrumb"
              listTag="ol"
              tag="nav"
            >
              <BreadcrumbItem
                tag="li"
              >
                <Link
                  to="/app/settings/channels/gorgias_chat"
                >
                  Chat
                </Link>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                my chat integration
              </BreadcrumbItem>
            </Breadcrumb>
          }
        >
          <div
            className="page-header pageHeader"
          >
            <Breadcrumb
              aria-label="breadcrumb"
              listTag="ol"
              tag="nav"
            >
              <nav
                aria-label="breadcrumb"
                className=""
              >
                <ol
                  className="breadcrumb"
                >
                  <BreadcrumbItem
                    tag="li"
                  >
                    <li
                      className="breadcrumb-item"
                    >
                      <Link
                        to="/app/settings/channels/gorgias_chat"
                      >
                        <a
                          to="/app/settings/channels/gorgias_chat"
                        >
                          Chat
                        </a>
                      </Link>
                    </li>
                  </BreadcrumbItem>
                  <BreadcrumbItem
                    tag="li"
                  >
                    <li
                      className="breadcrumb-item"
                    >
                      my chat integration
                    </li>
                  </BreadcrumbItem>
                </ol>
              </nav>
            </Breadcrumb>
          </div>
        </PageHeader>
        <Component
          integration={
            Immutable.Map {
              "id": 7,
              "name": "my chat integration",
              "meta": Immutable.Map {},
              "decoration": Immutable.Map {
                "introduction_text": "this is an intro",
                "input_placeholder": "type something please",
                "main_color": "#123456",
              },
            }
          }
        >
          <div
            data-testid="GorgiasChatIntegrationNavigation"
          />
        </Component>
        <GorgiasChatIntegrationPreviewContainer
          preview={
            <ChatIntegrationPreview
              avatarType="team-members"
              introductionText="this is an intro"
              isOnline={true}
              mainColor="#123456"
              name="my chat integration"
              position={
                {
                  "alignment": "bottom-right",
                  "offsetX": 0,
                  "offsetY": 0,
                }
              }
            >
              <div
                className="content"
              />
              <QuickReplies
                mainColor="#123456"
                quickReplies={
                  [
                    "Get order status",
                    "Apply promo code",
                  ]
                }
              />
            </ChatIntegrationPreview>
          }
        >
          <Container
            className="pageContainer"
            fluid={true}
            tag="div"
          >
            <div
              className="pageContainer container-fluid"
            >
              <Row
                tag="div"
                widths={
                  [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <div
                  className="row"
                >
                  <Col
                    tag="div"
                    widths={
                      [
                        "xs",
                        "sm",
                        "md",
                        "lg",
                        "xl",
                      ]
                    }
                  >
                    <div
                      className="col"
                    >
                      <Form
                        onSubmit={[Function]}
                        tag="form"
                      >
                        <form
                          className=""
                          onSubmit={[Function]}
                        >
                          <div
                            className="mb-4"
                          >
                            <h4>
                              Quick replies
                            </h4>
                            <p
                              className="mb16"
                            >
                              When a customer opens the chat, select the quick replies the customer can click on.
                            </p>
                            <div
                              className="d-flex align-items-center mb16"
                            >
                              <ToggleInput
                                aria-label="Enable quick replies"
                                isToggled={false}
                                onClick={[Function]}
                              >
                                <div>
                                  <Label
                                    aria-checked={false}
                                    aria-label="Enable quick replies"
                                    className="label"
                                    htmlFor="toggle-button-1"
                                    isDisabled={false}
                                    onClick={[Function]}
                                    role="switch"
                                  >
                                    <label
                                      aria-checked={false}
                                      aria-label="Enable quick replies"
                                      className="label label"
                                      htmlFor="toggle-button-1"
                                      onClick={[Function]}
                                      role="switch"
                                    >
                                      <input
                                        aria-label="Enable quick replies"
                                        checked={false}
                                        className="input"
                                        disabled={true}
                                        id="toggle-button-1"
                                        name="toggle-button-1"
                                        type="checkbox"
                                      />
                                      <div
                                        className="slider"
                                      />
                                    </label>
                                  </Label>
                                </div>
                              </ToggleInput>
                              <div
                                className="ml-2"
                              >
                                <b>
                                  Enable quick replies
                                </b>
                              </div>
                            </div>
                          </div>
                          <ListField
                            addLabel="Add Quick Reply"
                            className="container"
                            disabled={true}
                            items={
                              Immutable.List [
                                "Get order status",
                                "Apply promo code",
                              ]
                            }
                            maxItems={3}
                            maxLength={20}
                            onChange={[Function]}
                          >
                            <div
                              className="container"
                            >
                              <Row
                                className="row"
                                key="0"
                                tag="div"
                                widths={
                                  [
                                    "xs",
                                    "sm",
                                    "md",
                                    "lg",
                                    "xl",
                                  ]
                                }
                              >
                                <div
                                  className="row row"
                                >
                                  <Col
                                    className="flex-grow pr-0"
                                    tag="div"
                                    widths={
                                      [
                                        "xs",
                                        "sm",
                                        "md",
                                        "lg",
                                        "xl",
                                      ]
                                    }
                                  >
                                    <div
                                      className="flex-grow pr-0 col"
                                    >
                                      <ForwardRef(TextInput)
                                        className="my-0"
                                        isDisabled={true}
                                        isRequired={true}
                                        maxLength={20}
                                        name="item-0"
                                        onChange={[Function]}
                                        placeholder="Type something (limited to 20 characters)"
                                        size={300}
                                        value="Get order status"
                                      >
                                        <div
                                          className="wrapper isDisabled my-0"
                                        >
                                          <input
                                            className="input"
                                            disabled={true}
                                            id="input-text-2"
                                            maxLength={20}
                                            name="item-0"
                                            onChange={[Function]}
                                            placeholder="Type something (limited to 20 characters)"
                                            required={true}
                                            size={300}
                                            type="text"
                                            value="Get order status"
                                          />
                                        </div>
                                      </ForwardRef(TextInput)>
                                    </div>
                                  </Col>
                                  <Col
                                    className="d-flex col-sm-auto delete"
                                    onClick={[Function]}
                                    tag="div"
                                    widths={
                                      [
                                        "xs",
                                        "sm",
                                        "md",
                                        "lg",
                                        "xl",
                                      ]
                                    }
                                  >
                                    <div
                                      className="d-flex col-sm-auto delete col"
                                      onClick={[Function]}
                                    >
                                      <i
                                        className="material-icons md-2 text-muted"
                                      >
                                        clear
                                      </i>
                                    </div>
                                  </Col>
                                </div>
                              </Row>
                              <Row
                                className="row"
                                key="1"
                                tag="div"
                                widths={
                                  [
                                    "xs",
                                    "sm",
                                    "md",
                                    "lg",
                                    "xl",
                                  ]
                                }
                              >
                                <div
                                  className="row row"
                                >
                                  <Col
                                    className="flex-grow pr-0"
                                    tag="div"
                                    widths={
                                      [
                                        "xs",
                                        "sm",
                                        "md",
                                        "lg",
                                        "xl",
                                      ]
                                    }
                                  >
                                    <div
                                      className="flex-grow pr-0 col"
                                    >
                                      <ForwardRef(TextInput)
                                        className="my-0"
                                        isDisabled={true}
                                        isRequired={true}
                                        maxLength={20}
                                        name="item-1"
                                        onChange={[Function]}
                                        placeholder="Type something (limited to 20 characters)"
                                        size={300}
                                        value="Apply promo code"
                                      >
                                        <div
                                          className="wrapper isDisabled my-0"
                                        >
                                          <input
                                            className="input"
                                            disabled={true}
                                            id="input-text-3"
                                            maxLength={20}
                                            name="item-1"
                                            onChange={[Function]}
                                            placeholder="Type something (limited to 20 characters)"
                                            required={true}
                                            size={300}
                                            type="text"
                                            value="Apply promo code"
                                          />
                                        </div>
                                      </ForwardRef(TextInput)>
                                    </div>
                                  </Col>
                                  <Col
                                    className="d-flex col-sm-auto delete"
                                    onClick={[Function]}
                                    tag="div"
                                    widths={
                                      [
                                        "xs",
                                        "sm",
                                        "md",
                                        "lg",
                                        "xl",
                                      ]
                                    }
                                  >
                                    <div
                                      className="d-flex col-sm-auto delete col"
                                      onClick={[Function]}
                                    >
                                      <i
                                        className="material-icons md-2 text-muted"
                                      >
                                        clear
                                      </i>
                                    </div>
                                  </Col>
                                </div>
                              </Row>
                              <Button
                                className="d-flex align-items-center"
                                color="secondary"
                                disabled={true}
                                onClick={[Function]}
                                size="sm"
                                tag="button"
                              >
                                <button
                                  aria-label={null}
                                  className="d-flex align-items-center btn btn-secondary btn-sm disabled"
                                  disabled={true}
                                  onClick={[Function]}
                                  type="button"
                                >
                                  <i
                                    className="material-icons md-2"
                                  >
                                    add
                                  </i>
                                  <span
                                    className="ml-2"
                                  >
                                    Add Quick Reply
                                  </span>
                                </button>
                              </Button>
                            </div>
                          </ListField>
                          <div>
                            <ForwardRef
                              isDisabled={false}
                              isLoading={false}
                              type="submit"
                            >
                              <BaseButton
                                isDisabled={false}
                                isLoading={false}
                              >
                                <button
                                  className="wrapper fill primary medium"
                                  disabled={false}
                                  type="submit"
                                >
                                  Save Changes
                                </button>
                              </BaseButton>
                            </ForwardRef>
                          </div>
                        </form>
                      </Form>
                    </div>
                  </Col>
                  <Col
                    tag="div"
                    widths={
                      [
                        "xs",
                        "sm",
                        "md",
                        "lg",
                        "xl",
                      ]
                    }
                  >
                    <div
                      className="col"
                    >
                      <div
                        className="stickyParent"
                      >
                        <div
                          className="preview"
                        >
                          <ChatIntegrationPreview
                            avatarType="team-members"
                            introductionText="this is an intro"
                            isOnline={true}
                            mainColor="#123456"
                            name="my chat integration"
                            position={
                              {
                                "alignment": "bottom-right",
                                "offsetX": 0,
                                "offsetY": 0,
                              }
                            }
                          >
                            <CustomizedChatLauncher
                              className="preview previewWithBackground"
                              isClosed={false}
                              launcher={
                                {
                                  "type": "icon",
                                }
                              }
                              mainColor="#123456"
                              position={
                                {
                                  "alignment": "bottom-right",
                                  "offsetX": 0,
                                  "offsetY": 0,
                                }
                              }
                            >
                              <div
                                className="wrapper preview previewWithBackground"
                              >
                                <div
                                  className="buttonWrapper bottom-right"
                                >
                                  <div
                                    className="axisLauncherWrapper"
                                  >
                                    <ChatLauncher
                                      backgroundColor="#123456"
                                      type="icon"
                                      windowState="closed"
                                    >
                                      <div
                                        className="launcher"
                                        style={
                                          {
                                            "backgroundColor": "#123456",
                                          }
                                        }
                                      >
                                        <div
                                          className="iconWrapper"
                                        >
                                          <BubbleIcon
                                            className="icon"
                                            fill="#FFFFFF"
                                          >
                                            <svg
                                              className="icon"
                                              height="24"
                                              viewBox="0 0 24 24"
                                              width="24"
                                              xmlns="http://www.w3.org/2000/svg"
                                              xmlnsXlink="http://www.w3.org/1999/xlink"
                                            >
                                              <clipPath
                                                id="bubble-icon"
                                              >
                                                <path
                                                  d="m0 0h24v24h-24z"
                                                />
                                              </clipPath>
                                              <g
                                                clipPath="url(#bubble-icon)"
                                              >
                                                <path
                                                  clipRule="evenodd"
                                                  d="m19.875 21.0548c2.5274-2.2 4.125-5.4409 4.125-9.0548 0-6.62742-5.3726-12-12-12-6.62742 0-12 5.37258-12 12 0 6.6274 5.37258 12 12 12h7.875zm-12.375-7.9298c.62132 0 1.125-.5037 1.125-1.125s-.50368-1.125-1.125-1.125-1.125.5037-1.125 1.125.50368 1.125 1.125 1.125zm4.5 0c.6213 0 1.125-.5037 1.125-1.125s-.5037-1.125-1.125-1.125-1.125.5037-1.125 1.125.5037 1.125 1.125 1.125zm5.625-1.125c0 .6213-.5037 1.125-1.125 1.125s-1.125-.5037-1.125-1.125.5037-1.125 1.125-1.125 1.125.5037 1.125 1.125z"
                                                  fill="#FFFFFF"
                                                  fillRule="evenodd"
                                                />
                                              </g>
                                            </svg>
                                          </BubbleIcon>
                                        </div>
                                      </div>
                                    </ChatLauncher>
                                  </div>
                                </div>
                                <div>
                                  <div
                                    className="dialog"
                                  >
                                    <div
                                      className="header"
                                      style={
                                        {
                                          "backgroundColor": "#123456",
                                        }
                                      }
                                    >
                                      <ChatIntegrationAvatar
                                        avatarType="team-members"
                                        isOnline={true}
                                        mainColor="#123456"
                                        offlineColor="#EBEBEB"
                                        shouldHideAvatarOnlineMarker={false}
                                      >
                                        <div
                                          className="agents"
                                        >
                                          <div
                                            className="agent hasIcon first"
                                            key="first"
                                            style={
                                              {
                                                "borderColor": "#123456",
                                              }
                                            }
                                          >
                                            <i
                                              className="material-icons"
                                            >
                                              person
                                            </i>
                                          </div>
                                          <div
                                            className="agent hasIcon middle"
                                            key="middle"
                                            style={
                                              {
                                                "borderColor": "#123456",
                                              }
                                            }
                                          >
                                            <i
                                              className="material-icons"
                                            >
                                              person
                                            </i>
                                            <div
                                              className="onlineMarker"
                                            />
                                          </div>
                                          <div
                                            className="agent hasIcon last"
                                            key="last"
                                            style={
                                              {
                                                "borderColor": "#123456",
                                              }
                                            }
                                          >
                                            <i
                                              className="material-icons"
                                            >
                                              person
                                            </i>
                                          </div>
                                        </div>
                                      </ChatIntegrationAvatar>
                                      <div
                                        className="details"
                                        style={
                                          {
                                            "color": "#FFFFFF",
                                          }
                                        }
                                      >
                                        <ChatTitle
                                          title="my chat integration"
                                        >
                                          <div
                                            className="title"
                                          >
                                            my chat integration
                                          </div>
                                        </ChatTitle>
                                        <div
                                          className="introductionText"
                                        >
                                          this is an intro
                                        </div>
                                      </div>
                                    </div>
                                    <div
                                      className="content"
                                    >
                                      <div
                                        className="content"
                                      />
                                      <QuickReplies
                                        mainColor="#123456"
                                        quickReplies={
                                          [
                                            "Get order status",
                                            "Apply promo code",
                                          ]
                                        }
                                      >
                                        <div
                                          className="quickRepliesContent"
                                        >
                                          <div
                                            className="quickRepliesWrapper"
                                          >
                                            <button
                                              className="btn btn-reply-action reply"
                                              key="Get order status-0"
                                              style={
                                                {
                                                  "borderColor": "#123456",
                                                  "color": "#123456",
                                                }
                                              }
                                            >
                                              Get order status
                                            </button>
                                            <button
                                              className="btn btn-reply-action reply"
                                              key="Apply promo code-1"
                                              style={
                                                {
                                                  "borderColor": "#123456",
                                                  "color": "#123456",
                                                }
                                              }
                                            >
                                              Apply promo code
                                            </button>
                                          </div>
                                        </div>
                                      </QuickReplies>
                                    </div>
                                    <PoweredByGorgias
                                      translatedTexts={
                                        {
                                          "actionPostbackError": "An error occurred while processing your action. Please try again.",
                                          "backLabelBackAt": "Back online at {time}",
                                          "backLabelBackInAMinute": "Back in 1 minute",
                                          "backLabelBackInAnHour": "Back in 1 hour",
                                          "backLabelBackInDays": "Back in {value} days",
                                          "backLabelBackInHours": "Back in {value} hours",
                                          "backLabelBackInMinutes": "Back in {value} minutes",
                                          "backLabelBackTomorrow": "Back tomorrow",
                                          "campaignClickToReply": "Click to reply",
                                          "chatWithUs": "Chat with us",
                                          "clickToRetry": "Message not delivered. Click to retry.",
                                          "contactFormAskSubject": "What can we help you with?",
                                          "contactFormIntro": "Leave a message and we'll email you once we're online.",
                                          "conversationTimestampHeaderFormat": "MMMM D",
                                          "emailCaptureInputLabel": "Get notified by email",
                                          "emailCaptureOfflineThanksText": "Thanks {email}! We'll get back to you shortly.",
                                          "emailCaptureOfflineTriggerText": "We're away, leave us your email and we'll respond shortly.",
                                          "emailCaptureOnlineThanksText": "Thanks! We'll email you at {email} if you leave.",
                                          "emailCaptureOnlineTriggerText": "Leave us your email and we will reply soon.",
                                          "emailCapturePlaceholder": "your@email.com",
                                          "emailCaptureRequiredEmailPlaceholder": "Leave your email",
                                          "emailCaptureRequiredMessagePlaceholder": "Write your message",
                                          "emailCaptureTriggerTextBase": "Leave us your email and we'll get back to you.",
                                          "emailCaptureTriggerTypicalReplyHours": "We typically reply in a few hours.",
                                          "emailCaptureTriggerTypicalReplyMinutes": "We typically reply in a few minutes.",
                                          "fetchHistory": "Load more",
                                          "fetchingHistory": "Retrieving history...",
                                          "headerText": "Gorgias Team",
                                          "inputPlaceholder": "Type a message...",
                                          "introductionText": "How can we help?",
                                          "invalidFileError": "Only images are supported. Choose a file with a supported extension (jpg, jpeg, png, gif, or bmp).",
                                          "messageDelivered": "Delivered",
                                          "messageError": "An error occurred while sending your message. Please try again.",
                                          "messageIndicatorTitlePlural": "({count}) New messages",
                                          "messageIndicatorTitleSingular": "({count}) New message",
                                          "messageRelativeTimeDay": "{value}d ago",
                                          "messageRelativeTimeHour": "{value}h ago",
                                          "messageRelativeTimeJustNow": "Just now",
                                          "messageRelativeTimeMinute": "{value}m ago",
                                          "messageSending": "Sending...",
                                          "messageTimestampFormat": "h:mm A",
                                          "offlineIntroductionText": "We'll be back tomorrow",
                                          "poweredBy": "Powered by",
                                          "poweredByGorgias": "Powered by Gorgias",
                                          "replyTimeMoments": "We'll reply in a few moments",
                                          "requiredEmailCaptureInputLabel": "Email",
                                          "requiredEmailCaptureWelcomeMessage": "Hi, hope you're doing well! Leave us your email so we can get back to you.",
                                          "send": "Send",
                                          "tapToRetry": "Message not delivered. Tap to retry.",
                                          "unsupportedActionType": "Unsupported action type.",
                                          "unsupportedMessageType": "Unsupported message type.",
                                          "usualReplyTimeDay": "Typically replies within a day",
                                          "usualReplyTimeHours": "Typically replies in a few hours",
                                          "usualReplyTimeMinutes": "Typically replies in a few minutes",
                                          "waitTimeMediumReply": "Thanks for reaching out! Leave us your email and an agent will get back to you in about {waitTime} minutes.",
                                        }
                                      }
                                    >
                                      <div
                                        className="poweredBy"
                                      >
                                        <div>
                                          <span>
                                            Powered by
                                          </span>
                                          <img
                                            alt="powered-by"
                                            src="test-file-stub"
                                          />
                                        </div>
                                      </div>
                                    </PoweredByGorgias>
                                    <div
                                      className="footer"
                                    >
                                      <div
                                        className="placeholder"
                                      >
                                        Type a message...
                                      </div>
                                      <i
                                        className="material-icons icon attachmentIcon"
                                      >
                                        attach_file
                                      </i>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </CustomizedChatLauncher>
                          </ChatIntegrationPreview>
                        </div>
                      </div>
                    </div>
                  </Col>
                </div>
              </Row>
            </div>
          </Container>
        </GorgiasChatIntegrationPreviewContainer>
      </div>
    </GorgiasChatIntegrationQuickRepliesComponent>
  </Connect(GorgiasChatIntegrationQuickRepliesComponent)>
</Provider>
`;

exports[`<GorgiasChatIntegrationQuickReplies/> render() should render quick replies from the integration 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(GorgiasChatIntegrationQuickRepliesComponent)
    currentUser={Immutable.Map {}}
    integration={
      Immutable.Map {
        "id": 7,
        "name": "my chat integration",
        "meta": Immutable.Map {
          "quick_replies": Immutable.Map {
            "enabled": true,
            "replies": Immutable.List [
              "foo",
              "bar",
            ],
          },
        },
        "decoration": Immutable.Map {
          "introduction_text": "this is an intro",
          "input_placeholder": "type something please",
          "main_color": "#123456",
        },
      }
    }
    updateOrCreateIntegration={[MockFunction]}
  >
    <GorgiasChatIntegrationQuickRepliesComponent
      integration={
        Immutable.Map {
          "id": 7,
          "name": "my chat integration",
          "meta": Immutable.Map {
            "quick_replies": Immutable.Map {
              "enabled": true,
              "replies": Immutable.List [
                "foo",
                "bar",
              ],
            },
          },
          "decoration": Immutable.Map {
            "introduction_text": "this is an intro",
            "input_placeholder": "type something please",
            "main_color": "#123456",
          },
        }
      }
      updateOrCreateIntegration={[Function]}
    >
      <div
        className="full-width"
      >
        <PageHeader
          title={
            <Breadcrumb
              aria-label="breadcrumb"
              listTag="ol"
              tag="nav"
            >
              <BreadcrumbItem
                tag="li"
              >
                <Link
                  to="/app/settings/channels/gorgias_chat"
                >
                  Chat
                </Link>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                my chat integration
              </BreadcrumbItem>
            </Breadcrumb>
          }
        >
          <div
            className="page-header pageHeader"
          >
            <Breadcrumb
              aria-label="breadcrumb"
              listTag="ol"
              tag="nav"
            >
              <nav
                aria-label="breadcrumb"
                className=""
              >
                <ol
                  className="breadcrumb"
                >
                  <BreadcrumbItem
                    tag="li"
                  >
                    <li
                      className="breadcrumb-item"
                    >
                      <Link
                        to="/app/settings/channels/gorgias_chat"
                      >
                        <a
                          to="/app/settings/channels/gorgias_chat"
                        >
                          Chat
                        </a>
                      </Link>
                    </li>
                  </BreadcrumbItem>
                  <BreadcrumbItem
                    tag="li"
                  >
                    <li
                      className="breadcrumb-item"
                    >
                      my chat integration
                    </li>
                  </BreadcrumbItem>
                </ol>
              </nav>
            </Breadcrumb>
          </div>
        </PageHeader>
        <Component
          integration={
            Immutable.Map {
              "id": 7,
              "name": "my chat integration",
              "meta": Immutable.Map {
                "quick_replies": Immutable.Map {
                  "enabled": true,
                  "replies": Immutable.List [
                    "foo",
                    "bar",
                  ],
                },
              },
              "decoration": Immutable.Map {
                "introduction_text": "this is an intro",
                "input_placeholder": "type something please",
                "main_color": "#123456",
              },
            }
          }
        >
          <div
            data-testid="GorgiasChatIntegrationNavigation"
          />
        </Component>
        <GorgiasChatIntegrationPreviewContainer
          preview={
            <ChatIntegrationPreview
              avatarType="team-members"
              introductionText="this is an intro"
              isOnline={true}
              mainColor="#123456"
              name="my chat integration"
              position={
                {
                  "alignment": "bottom-right",
                  "offsetX": 0,
                  "offsetY": 0,
                }
              }
            >
              <div
                className="content"
              />
              <QuickReplies
                mainColor="#123456"
                quickReplies={
                  [
                    "foo",
                    "bar",
                  ]
                }
              />
            </ChatIntegrationPreview>
          }
        >
          <Container
            className="pageContainer"
            fluid={true}
            tag="div"
          >
            <div
              className="pageContainer container-fluid"
            >
              <Row
                tag="div"
                widths={
                  [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <div
                  className="row"
                >
                  <Col
                    tag="div"
                    widths={
                      [
                        "xs",
                        "sm",
                        "md",
                        "lg",
                        "xl",
                      ]
                    }
                  >
                    <div
                      className="col"
                    >
                      <Form
                        onSubmit={[Function]}
                        tag="form"
                      >
                        <form
                          className=""
                          onSubmit={[Function]}
                        >
                          <div
                            className="mb-4"
                          >
                            <h4>
                              Quick replies
                            </h4>
                            <p
                              className="mb16"
                            >
                              When a customer opens the chat, select the quick replies the customer can click on.
                            </p>
                            <div
                              className="d-flex align-items-center mb16"
                            >
                              <ToggleInput
                                aria-label="Enable quick replies"
                                isToggled={true}
                                onClick={[Function]}
                              >
                                <div>
                                  <Label
                                    aria-checked={true}
                                    aria-label="Enable quick replies"
                                    className="label"
                                    htmlFor="toggle-button-4"
                                    isDisabled={false}
                                    onClick={[Function]}
                                    role="switch"
                                  >
                                    <label
                                      aria-checked={true}
                                      aria-label="Enable quick replies"
                                      className="label label"
                                      htmlFor="toggle-button-4"
                                      onClick={[Function]}
                                      role="switch"
                                    >
                                      <input
                                        aria-label="Enable quick replies"
                                        checked={true}
                                        className="input"
                                        disabled={true}
                                        id="toggle-button-4"
                                        name="toggle-button-4"
                                        type="checkbox"
                                      />
                                      <div
                                        className="slider"
                                      />
                                    </label>
                                  </Label>
                                </div>
                              </ToggleInput>
                              <div
                                className="ml-2"
                              >
                                <b>
                                  Enable quick replies
                                </b>
                              </div>
                            </div>
                          </div>
                          <ListField
                            addLabel="Add Quick Reply"
                            className="container"
                            disabled={false}
                            items={
                              Immutable.List [
                                "foo",
                                "bar",
                              ]
                            }
                            maxItems={3}
                            maxLength={20}
                            onChange={[Function]}
                          >
                            <div
                              className="container"
                            >
                              <Row
                                className="row"
                                key="0"
                                tag="div"
                                widths={
                                  [
                                    "xs",
                                    "sm",
                                    "md",
                                    "lg",
                                    "xl",
                                  ]
                                }
                              >
                                <div
                                  className="row row"
                                >
                                  <Col
                                    className="flex-grow pr-0"
                                    tag="div"
                                    widths={
                                      [
                                        "xs",
                                        "sm",
                                        "md",
                                        "lg",
                                        "xl",
                                      ]
                                    }
                                  >
                                    <div
                                      className="flex-grow pr-0 col"
                                    >
                                      <ForwardRef(TextInput)
                                        className="my-0"
                                        isDisabled={false}
                                        isRequired={true}
                                        maxLength={20}
                                        name="item-0"
                                        onChange={[Function]}
                                        placeholder="Type something (limited to 20 characters)"
                                        size={300}
                                        value="foo"
                                      >
                                        <div
                                          className="wrapper my-0"
                                        >
                                          <input
                                            className="input"
                                            disabled={false}
                                            id="input-text-5"
                                            maxLength={20}
                                            name="item-0"
                                            onChange={[Function]}
                                            placeholder="Type something (limited to 20 characters)"
                                            required={true}
                                            size={300}
                                            type="text"
                                            value="foo"
                                          />
                                        </div>
                                      </ForwardRef(TextInput)>
                                    </div>
                                  </Col>
                                  <Col
                                    className="d-flex col-sm-auto delete"
                                    onClick={[Function]}
                                    tag="div"
                                    widths={
                                      [
                                        "xs",
                                        "sm",
                                        "md",
                                        "lg",
                                        "xl",
                                      ]
                                    }
                                  >
                                    <div
                                      className="d-flex col-sm-auto delete col"
                                      onClick={[Function]}
                                    >
                                      <i
                                        className="material-icons md-2 text-danger"
                                      >
                                        clear
                                      </i>
                                    </div>
                                  </Col>
                                </div>
                              </Row>
                              <Row
                                className="row"
                                key="1"
                                tag="div"
                                widths={
                                  [
                                    "xs",
                                    "sm",
                                    "md",
                                    "lg",
                                    "xl",
                                  ]
                                }
                              >
                                <div
                                  className="row row"
                                >
                                  <Col
                                    className="flex-grow pr-0"
                                    tag="div"
                                    widths={
                                      [
                                        "xs",
                                        "sm",
                                        "md",
                                        "lg",
                                        "xl",
                                      ]
                                    }
                                  >
                                    <div
                                      className="flex-grow pr-0 col"
                                    >
                                      <ForwardRef(TextInput)
                                        className="my-0"
                                        isDisabled={false}
                                        isRequired={true}
                                        maxLength={20}
                                        name="item-1"
                                        onChange={[Function]}
                                        placeholder="Type something (limited to 20 characters)"
                                        size={300}
                                        value="bar"
                                      >
                                        <div
                                          className="wrapper my-0"
                                        >
                                          <input
                                            className="input"
                                            disabled={false}
                                            id="input-text-6"
                                            maxLength={20}
                                            name="item-1"
                                            onChange={[Function]}
                                            placeholder="Type something (limited to 20 characters)"
                                            required={true}
                                            size={300}
                                            type="text"
                                            value="bar"
                                          />
                                        </div>
                                      </ForwardRef(TextInput)>
                                    </div>
                                  </Col>
                                  <Col
                                    className="d-flex col-sm-auto delete"
                                    onClick={[Function]}
                                    tag="div"
                                    widths={
                                      [
                                        "xs",
                                        "sm",
                                        "md",
                                        "lg",
                                        "xl",
                                      ]
                                    }
                                  >
                                    <div
                                      className="d-flex col-sm-auto delete col"
                                      onClick={[Function]}
                                    >
                                      <i
                                        className="material-icons md-2 text-danger"
                                      >
                                        clear
                                      </i>
                                    </div>
                                  </Col>
                                </div>
                              </Row>
                              <Button
                                className="d-flex align-items-center"
                                color="secondary"
                                disabled={false}
                                onClick={[Function]}
                                size="sm"
                                tag="button"
                              >
                                <button
                                  aria-label={null}
                                  className="d-flex align-items-center btn btn-secondary btn-sm"
                                  disabled={false}
                                  onClick={[Function]}
                                  type="button"
                                >
                                  <i
                                    className="material-icons md-2"
                                  >
                                    add
                                  </i>
                                  <span
                                    className="ml-2"
                                  >
                                    Add Quick Reply
                                  </span>
                                </button>
                              </Button>
                            </div>
                          </ListField>
                          <div>
                            <ForwardRef
                              isDisabled={false}
                              isLoading={false}
                              type="submit"
                            >
                              <BaseButton
                                isDisabled={false}
                                isLoading={false}
                              >
                                <button
                                  className="wrapper fill primary medium"
                                  disabled={false}
                                  type="submit"
                                >
                                  Save Changes
                                </button>
                              </BaseButton>
                            </ForwardRef>
                          </div>
                        </form>
                      </Form>
                    </div>
                  </Col>
                  <Col
                    tag="div"
                    widths={
                      [
                        "xs",
                        "sm",
                        "md",
                        "lg",
                        "xl",
                      ]
                    }
                  >
                    <div
                      className="col"
                    >
                      <div
                        className="stickyParent"
                      >
                        <div
                          className="preview"
                        >
                          <ChatIntegrationPreview
                            avatarType="team-members"
                            introductionText="this is an intro"
                            isOnline={true}
                            mainColor="#123456"
                            name="my chat integration"
                            position={
                              {
                                "alignment": "bottom-right",
                                "offsetX": 0,
                                "offsetY": 0,
                              }
                            }
                          >
                            <CustomizedChatLauncher
                              className="preview previewWithBackground"
                              isClosed={false}
                              launcher={
                                {
                                  "type": "icon",
                                }
                              }
                              mainColor="#123456"
                              position={
                                {
                                  "alignment": "bottom-right",
                                  "offsetX": 0,
                                  "offsetY": 0,
                                }
                              }
                            >
                              <div
                                className="wrapper preview previewWithBackground"
                              >
                                <div
                                  className="buttonWrapper bottom-right"
                                >
                                  <div
                                    className="axisLauncherWrapper"
                                  >
                                    <ChatLauncher
                                      backgroundColor="#123456"
                                      type="icon"
                                      windowState="closed"
                                    >
                                      <div
                                        className="launcher"
                                        style={
                                          {
                                            "backgroundColor": "#123456",
                                          }
                                        }
                                      >
                                        <div
                                          className="iconWrapper"
                                        >
                                          <BubbleIcon
                                            className="icon"
                                            fill="#FFFFFF"
                                          >
                                            <svg
                                              className="icon"
                                              height="24"
                                              viewBox="0 0 24 24"
                                              width="24"
                                              xmlns="http://www.w3.org/2000/svg"
                                              xmlnsXlink="http://www.w3.org/1999/xlink"
                                            >
                                              <clipPath
                                                id="bubble-icon"
                                              >
                                                <path
                                                  d="m0 0h24v24h-24z"
                                                />
                                              </clipPath>
                                              <g
                                                clipPath="url(#bubble-icon)"
                                              >
                                                <path
                                                  clipRule="evenodd"
                                                  d="m19.875 21.0548c2.5274-2.2 4.125-5.4409 4.125-9.0548 0-6.62742-5.3726-12-12-12-6.62742 0-12 5.37258-12 12 0 6.6274 5.37258 12 12 12h7.875zm-12.375-7.9298c.62132 0 1.125-.5037 1.125-1.125s-.50368-1.125-1.125-1.125-1.125.5037-1.125 1.125.50368 1.125 1.125 1.125zm4.5 0c.6213 0 1.125-.5037 1.125-1.125s-.5037-1.125-1.125-1.125-1.125.5037-1.125 1.125.5037 1.125 1.125 1.125zm5.625-1.125c0 .6213-.5037 1.125-1.125 1.125s-1.125-.5037-1.125-1.125.5037-1.125 1.125-1.125 1.125.5037 1.125 1.125z"
                                                  fill="#FFFFFF"
                                                  fillRule="evenodd"
                                                />
                                              </g>
                                            </svg>
                                          </BubbleIcon>
                                        </div>
                                      </div>
                                    </ChatLauncher>
                                  </div>
                                </div>
                                <div>
                                  <div
                                    className="dialog"
                                  >
                                    <div
                                      className="header"
                                      style={
                                        {
                                          "backgroundColor": "#123456",
                                        }
                                      }
                                    >
                                      <ChatIntegrationAvatar
                                        avatarType="team-members"
                                        isOnline={true}
                                        mainColor="#123456"
                                        offlineColor="#EBEBEB"
                                        shouldHideAvatarOnlineMarker={false}
                                      >
                                        <div
                                          className="agents"
                                        >
                                          <div
                                            className="agent hasIcon first"
                                            key="first"
                                            style={
                                              {
                                                "borderColor": "#123456",
                                              }
                                            }
                                          >
                                            <i
                                              className="material-icons"
                                            >
                                              person
                                            </i>
                                          </div>
                                          <div
                                            className="agent hasIcon middle"
                                            key="middle"
                                            style={
                                              {
                                                "borderColor": "#123456",
                                              }
                                            }
                                          >
                                            <i
                                              className="material-icons"
                                            >
                                              person
                                            </i>
                                            <div
                                              className="onlineMarker"
                                            />
                                          </div>
                                          <div
                                            className="agent hasIcon last"
                                            key="last"
                                            style={
                                              {
                                                "borderColor": "#123456",
                                              }
                                            }
                                          >
                                            <i
                                              className="material-icons"
                                            >
                                              person
                                            </i>
                                          </div>
                                        </div>
                                      </ChatIntegrationAvatar>
                                      <div
                                        className="details"
                                        style={
                                          {
                                            "color": "#FFFFFF",
                                          }
                                        }
                                      >
                                        <ChatTitle
                                          title="my chat integration"
                                        >
                                          <div
                                            className="title"
                                          >
                                            my chat integration
                                          </div>
                                        </ChatTitle>
                                        <div
                                          className="introductionText"
                                        >
                                          this is an intro
                                        </div>
                                      </div>
                                    </div>
                                    <div
                                      className="content"
                                    >
                                      <div
                                        className="content"
                                      />
                                      <QuickReplies
                                        mainColor="#123456"
                                        quickReplies={
                                          [
                                            "foo",
                                            "bar",
                                          ]
                                        }
                                      >
                                        <div
                                          className="quickRepliesContent"
                                        >
                                          <div
                                            className="quickRepliesWrapper"
                                          >
                                            <button
                                              className="btn btn-reply-action reply"
                                              key="foo-0"
                                              style={
                                                {
                                                  "borderColor": "#123456",
                                                  "color": "#123456",
                                                }
                                              }
                                            >
                                              foo
                                            </button>
                                            <button
                                              className="btn btn-reply-action reply"
                                              key="bar-1"
                                              style={
                                                {
                                                  "borderColor": "#123456",
                                                  "color": "#123456",
                                                }
                                              }
                                            >
                                              bar
                                            </button>
                                          </div>
                                        </div>
                                      </QuickReplies>
                                    </div>
                                    <PoweredByGorgias
                                      translatedTexts={
                                        {
                                          "actionPostbackError": "An error occurred while processing your action. Please try again.",
                                          "backLabelBackAt": "Back online at {time}",
                                          "backLabelBackInAMinute": "Back in 1 minute",
                                          "backLabelBackInAnHour": "Back in 1 hour",
                                          "backLabelBackInDays": "Back in {value} days",
                                          "backLabelBackInHours": "Back in {value} hours",
                                          "backLabelBackInMinutes": "Back in {value} minutes",
                                          "backLabelBackTomorrow": "Back tomorrow",
                                          "campaignClickToReply": "Click to reply",
                                          "chatWithUs": "Chat with us",
                                          "clickToRetry": "Message not delivered. Click to retry.",
                                          "contactFormAskSubject": "What can we help you with?",
                                          "contactFormIntro": "Leave a message and we'll email you once we're online.",
                                          "conversationTimestampHeaderFormat": "MMMM D",
                                          "emailCaptureInputLabel": "Get notified by email",
                                          "emailCaptureOfflineThanksText": "Thanks {email}! We'll get back to you shortly.",
                                          "emailCaptureOfflineTriggerText": "We're away, leave us your email and we'll respond shortly.",
                                          "emailCaptureOnlineThanksText": "Thanks! We'll email you at {email} if you leave.",
                                          "emailCaptureOnlineTriggerText": "Leave us your email and we will reply soon.",
                                          "emailCapturePlaceholder": "your@email.com",
                                          "emailCaptureRequiredEmailPlaceholder": "Leave your email",
                                          "emailCaptureRequiredMessagePlaceholder": "Write your message",
                                          "emailCaptureTriggerTextBase": "Leave us your email and we'll get back to you.",
                                          "emailCaptureTriggerTypicalReplyHours": "We typically reply in a few hours.",
                                          "emailCaptureTriggerTypicalReplyMinutes": "We typically reply in a few minutes.",
                                          "fetchHistory": "Load more",
                                          "fetchingHistory": "Retrieving history...",
                                          "headerText": "Gorgias Team",
                                          "inputPlaceholder": "Type a message...",
                                          "introductionText": "How can we help?",
                                          "invalidFileError": "Only images are supported. Choose a file with a supported extension (jpg, jpeg, png, gif, or bmp).",
                                          "messageDelivered": "Delivered",
                                          "messageError": "An error occurred while sending your message. Please try again.",
                                          "messageIndicatorTitlePlural": "({count}) New messages",
                                          "messageIndicatorTitleSingular": "({count}) New message",
                                          "messageRelativeTimeDay": "{value}d ago",
                                          "messageRelativeTimeHour": "{value}h ago",
                                          "messageRelativeTimeJustNow": "Just now",
                                          "messageRelativeTimeMinute": "{value}m ago",
                                          "messageSending": "Sending...",
                                          "messageTimestampFormat": "h:mm A",
                                          "offlineIntroductionText": "We'll be back tomorrow",
                                          "poweredBy": "Powered by",
                                          "poweredByGorgias": "Powered by Gorgias",
                                          "replyTimeMoments": "We'll reply in a few moments",
                                          "requiredEmailCaptureInputLabel": "Email",
                                          "requiredEmailCaptureWelcomeMessage": "Hi, hope you're doing well! Leave us your email so we can get back to you.",
                                          "send": "Send",
                                          "tapToRetry": "Message not delivered. Tap to retry.",
                                          "unsupportedActionType": "Unsupported action type.",
                                          "unsupportedMessageType": "Unsupported message type.",
                                          "usualReplyTimeDay": "Typically replies within a day",
                                          "usualReplyTimeHours": "Typically replies in a few hours",
                                          "usualReplyTimeMinutes": "Typically replies in a few minutes",
                                          "waitTimeMediumReply": "Thanks for reaching out! Leave us your email and an agent will get back to you in about {waitTime} minutes.",
                                        }
                                      }
                                    >
                                      <div
                                        className="poweredBy"
                                      >
                                        <div>
                                          <span>
                                            Powered by
                                          </span>
                                          <img
                                            alt="powered-by"
                                            src="test-file-stub"
                                          />
                                        </div>
                                      </div>
                                    </PoweredByGorgias>
                                    <div
                                      className="footer"
                                    >
                                      <div
                                        className="placeholder"
                                      >
                                        Type a message...
                                      </div>
                                      <i
                                        className="material-icons icon attachmentIcon"
                                      >
                                        attach_file
                                      </i>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </CustomizedChatLauncher>
                          </ChatIntegrationPreview>
                        </div>
                      </div>
                    </div>
                  </Col>
                </div>
              </Row>
            </div>
          </Container>
        </GorgiasChatIntegrationPreviewContainer>
      </div>
    </GorgiasChatIntegrationQuickRepliesComponent>
  </Connect(GorgiasChatIntegrationQuickRepliesComponent)>
</Provider>
`;
